logs/watchdog_20251012_1800.log
[12/10/2025 18:00:01,64] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 18:00:01,88] END WATCHDOG 
